# germina

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  COPYING  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflows/: ci.yml  ci_and_deploy.yml  deploy_backend.yml  deploy_backend_gcp.yml  deploy_backend_scaleway.yml  deploy_frontend.yml
builder/: .flake8  Dockerfile  README.md  builder.py  gcp.py  image.py  images.py  main.py  requirements.txt  users.py
builder/survey_template/: Dockerfile  app.py  requirements.txt  schema.json  ui_schema.json
builder/survey_template/static/: form-entry.js
builder/survey_template/static/js/: form.bundle.js
builder/survey_template/templates/: form.html
interface/: .eslintignore  README.md  eslint.config.cjs  package-lock.json  package.json
interface/app/: globals.css  layout.tsx
interface/app/api/chat/: route.ts
interface/app/protected/deploiement/: loading.tsx  page.tsx
interface/app/protected/home/: loading.tsx  page.tsx
interface/app/protected/questionnaire/: loading.tsx  page.tsx
interface/app/protected/statistics/: page.tsx
interface/components/: chatassistant.tsx  clientlayout.tsx  deployoptions.tsx  footer.tsx  hero.tsx  jsonformrendered.tsx  newquestionnaire.tsx  noquestionnaire.tsx  output-display.tsx  previewpane.tsx  questionairescreatehome.tsx  questionairesdeployhome.tsx  schemainputs.tsx  surveyeditor.tsx
interface/utils/supabase/: check-env-vars.ts  middleware.ts
(+5 files in other folders)
