[tool.black]
line-length = 88
target-version = ['py310']
skip-string-normalization = true

[tool.isort]
profile = 'black'
line_length = 88
known_first_party = ['builder']

[tool.mypy]
python_version = 3.10
strict = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ['E203', 'W503']

[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'