[tool.black]
line-length = 100
target-version = ['py310']
skip-string-normalization = true

[tool.isort]
profile = 'black'
line_length = 100
known_first_party = ['builder']

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'
